<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp">
<TextView
    android:layout_margin="10dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Enter_rule_title"/>
    <EditText
        android:id="@+id/rule_input_topic"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"/>
    <TextView
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Enter_rule_desk"/>
    <EditText
        android:id="@+id/rule_input"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
    <Button
        android:id="@+id/btn_cancell"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:backgroundTint="@color/yelllow"
        android:text="@string/cancell"/>
    <Button
        android:id="@+id/btn_send"
        android:text="@string/Send"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="70dp"
        android:backgroundTint="@color/green"
       android:layout_margin="10dp"/>
    </LinearLayout>
</LinearLayout>