<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:background="@drawable/border_shadow">
        <LinearLayout
            android:layout_margin="1dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:padding="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rule1"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:layout_marginRight="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/rule_topic_output"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/read_the_book"
                    android:textColor="@color/white"
                    android:layout_weight="1"
                    android:textSize="20dp" />


                <ImageView
                    android:layout_weight="9"
                    android:id="@+id/dropdown_menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_more_vert_24"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_margin="1dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/rule_output"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rule1_text"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:background="@drawable/border_shadow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_700"
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_margin="1dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rule2"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:layout_marginRight="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/rule_topic_output2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deadline"
                    android:textColor="@color/white"
                    android:textSize="20dp"/>
                <ImageView
                    android:id="@+id/dropdown_menu2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_more_vert_24"
                    android:layout_marginLeft="150dp" />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@color/white"
            android:layout_margin="1dp">
            <TextView
                android:id="@+id/rule_output2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rule2_text"
                android:textColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>