<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    app:ignore="NamespaceTypo">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="100dp"
            android:orientation="vertical">

            <ImageView
                android:layout_gravity="center"
                android:src="@drawable/icon"
                android:layout_marginTop="80dp"
                android:layout_width="250dp"
                android:layout_height="250dp"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="40dp"
                android:hint="@string/email"
                android:textColorHint="@color/purple_500"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:id="@+id/edit_email"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="40dp"
                android:hint="@string/passwrod"
                android:textColorHint="@color/purple_500"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:id="@+id/edit_password"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>


            <androidx.cardview.widget.CardView
                android:id="@+id/Login_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="40dp"
                android:elevation="8dp"
                app:cardCornerRadius="100dp"
                card_view:cardCornerRadius="100dp"
                card_view:cardElevation="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/login"
                    android:textColor="@color/purple_500"
                    android:textSize="26dp" />

            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/forgot_password"
                android:text="@string/forgot_password"
                android:textSize="24dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>